--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node server.js",
+    "start": "node start.js",
     "dev": "vue-cli-service serve --mode development",
     "serve": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build --mode production",
@@ -14,7 +14,13 @@
     "@mdi/js": "^6.5.95",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "express-jwt-authz": "^2.4.1",
+    "express-openid-connect": "^2.5.1",
+    "helmet": "^4.6.0",
+    "jwks-rsa": "^2.0.5",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-content-loading": "^1.6.0",
@@ -24,6 +30,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "dotenv": "^10.0.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.4",
