--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-openid-connect": "^2.5.2",
     "express-winston": "^4.2.0",
     "helmet": "^4.6.0",
+    "jsonschema": "^1.4.0",
     "jwks-rsa": "^2.0.5",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
