--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-content-loading": "^1.6.0",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
     "winston": "^3.3.3"
