--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^4.6.0",
     "jsonschema": "^1.4.0",
     "jwks-rsa": "^2.0.5",
+    "moment": "^2.29.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-content-loading": "^1.6.0",
