--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "dotenv-flow": "^3.2.0",
     "nodemon": "^2.0.15",
     "sass": "~1.32.0",
@@ -46,7 +46,7 @@
     "vuetify-loader": "^1.7.0"
   },
   "engines": {
-    "node": "14.x",
-    "npm": "6.x"
+    "node": "16.x",
+    "npm": "8.x"
   }
 }
