--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/js": "^6.5.95",
     "auth0": "^2.37.0",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
