--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
+    "vuex": "^3.6.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
